--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,15 @@ services:
         POSTGRES_DB : nest
     networks:
       - akbarsyahn
+  test-db:
+    image: postgres:13
+    ports:
+      - 5435:5432
+    environment:
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: 4B4Y
+        POSTGRES_DB : nest
+    networks:
+      - akbarsyahn
 networks:
   akbarsyahn:
